made one change to the logo so that it appears correctly on mobile devices

--- a/webroot/css/sogive-night.css
+++ b/webroot/css/sogive-night.css
@@ -1,5 +1,55 @@
-.bg {
+.home-bg {
   background: url('../img/night-sunflowers.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.about-bg {
+  background: url('../img/hands-butterfly-2k.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.aims-bg {
+  background: url('../img/leaves-on-line-2k.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.team-bg {
+  background: url('../img/leaf-in-sun-2k.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.getinvolved-bg {
+  background: url('../img/plane-sunset-2k.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 40em; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.contact-bg {
+  background: url('../img/walking-at-dusk-2k.jpg') no-repeat center center;
   position: fixed;
   width: 100%;
   height: 40em; /*same height as jumbotron */
@@ -11,12 +61,21 @@
 .jumbotron {
   height: 40em;
   color: white;
-  text-shadow: #444 0 1px 1px;
-  background: rgba(0, 0, 0, 0.2);
+  text-shadow: #444 0 0px 10px;
+  background: rgba(0, 0, 0, 0.0);
+}
+
+.jumbotron p {
+  font-size: 24px;
 }
 
 .logo {
   width: 33em;
+  height: auto;
+}
+
+.logo-sm {
+  width: 100%;
   height: auto;
 }
 
@@ -32,10 +91,42 @@
   cursor: pointer;
   -webkit-user-select: none;
   background-image: none;
-  border: 1px solid;
+  border: 0px solid;
   color: #fff;
-  background-color: rgba(255,255,255,0.25);
+  background-color: #759dc4;
   border-color: #D1D3D4;
+}
+
+.btn-getinvolved:hover {
+  display: inline-block;
+  margin-top: 0.5em;
+  margin-bottom: 0;
+  font-weight:normal;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  background-image: none;
+  border: 0px solid;
+  color: #fff;
+  background-color: rgb(100, 138, 175);
+  border-color: #D1D3D4;
+}
+
+.send-form-button {
+  margin-top: 1em;
+}
+
+.divcontact-dropin {
+  background-color: #D1D3D4;
+  margin-top: -1px;
+  border-radius: 6px;
+  color: #000;
+  text-shadow: none;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 html {
@@ -61,11 +152,7 @@ html {
   min-height:500px;
   font-size:120%;
 }
-.page-part {
-  background-color: rgba(255, 255, 255, 0.7);
-  border-radius:6px;
-  padding-bottom:20px;
-}
+
 img.mugshot {
   width:140px;
   float:left;
@@ -152,4 +239,12 @@ h2 {
 
 .btn-getemailupdates:hover {
   background-color: rgba(255,255,255,0.5);
+}
+
+.nav>li>a {
+  font-size: 14px;
+}
+
+.bumped-down {
+  margin-top: 2em;
 }
